// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch EKILTs > Switch V4 LIVE: AssetHub -> Kilt > Receive native funds on native chain {"section":"assetSwitchPool1","method":"RemoteToLocalSwitchExecuted"} 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1000000000000000)",
      "to": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "RemoteToLocalSwitchExecuted",
    "section": "assetSwitchPool1",
  },
]
`;

exports[`Switch EKILTs > Switch V4 LIVE: AssetHub -> Kilt > Receive native funds on native chain {"section":"messageQueue","method":"Processed"} 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 1000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 1000000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`Switch EKILTs > Switch V4 LIVE: AssetHub -> Kilt > Withdraw native funds on foreign chain {"section":"foreignAssets","method":"Transferred"} 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "assetId": {
        "interior": {
          "X2": [
            {
              "GlobalConsensus": {
                "Ethereum": {
                  "chainId": 1,
                },
              },
            },
            {
              "AccountKey20": {
                "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                "network": null,
              },
            },
          ],
        },
        "parents": 2,
      },
      "from": "15jSz35ugoWTc61xHPoxEkHte4o7UanKCk1gx1dizA8yuNs8",
      "to": "13cKp88mpGREFCq8KsJEFjpSBnjFuCNWq6bmD3js7fu4f66e",
    },
    "method": "Transferred",
    "section": "foreignAssets",
  },
]
`;

exports[`Switch EKILTs > Switch V4 LIVE: AssetHub -> Kilt > Withdraw native funds on foreign chain {"section":"polkadotXcm","method":"Sent"} 1`] = `
[
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": "(rounded 2100)",
            },
          ],
        },
        "parents": 1,
      },
      "message": [
        {
          "ReserveAssetDeposited": [
            {
              "fun": {
                "Fungible": 1000000000000000,
              },
              "id": {
                "interior": {
                  "X2": [
                    {
                      "GlobalConsensus": {
                        "Ethereum": {
                          "chainId": 1,
                        },
                      },
                    },
                    {
                      "AccountKey20": {
                        "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 2,
              },
            },
          ],
        },
        "ClearOrigin",
        {
          "BuyExecution": {
            "fees": {
              "fun": {
                "Fungible": 1000000000000000,
              },
              "id": {
                "interior": {
                  "X2": [
                    {
                      "GlobalConsensus": {
                        "Ethereum": {
                          "chainId": 1,
                        },
                      },
                    },
                    {
                      "AccountKey20": {
                        "key": "0x5d3d01fd6d2ad1169b17918eb4f153c6616288eb",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 2,
              },
            },
            "weightLimit": "Unlimited",
          },
        },
        {
          "DepositAsset": {
            "assets": {
              "Wild": "All",
            },
            "beneficiary": {
              "interior": {
                "X1": [
                  {
                    "AccountId32": {
                      "id": "(hash)",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Polkadot",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
]
`;

exports[`Switch KILTs > Switch V4 LIVE: KILT -> AH > Receive native funds on native chain {"section":"foreignAssets","method":"Transferred"} 1`] = `[]`;

exports[`Switch KILTs > Switch V4 LIVE: KILT -> AH > Withdraw native funds on foreign chain {"section":"assetSwitchPool1","method":"LocalToRemoteSwitchExecuted"} 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "from": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "to": {
        "V4": {
          "interior": {
            "X1": [
              {
                "AccountId32": {
                  "id": "(hash)",
                  "network": null,
                },
              },
            ],
          },
          "parents": 0,
        },
      },
    },
    "method": "LocalToRemoteSwitchExecuted",
    "section": "assetSwitchPool1",
  },
]
`;

exports[`Switch KILTs > Switch V4 LIVE: KILT -> AH > assetSwitchPool1 Finalization Switch V4 LIVE: KILT -> AH 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "from": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "to": {
        "V4": {
          "interior": {
            "X1": [
              {
                "AccountId32": {
                  "id": "(hash)",
                  "network": null,
                },
              },
            ],
          },
          "parents": 0,
        },
      },
    },
    "method": "LocalToRemoteSwitchFinalized",
    "section": "assetSwitchPool1",
  },
]
`;
